leetcode-重构字符串